<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top_corner">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_wish_list_drag_handle"
        android:layout_width="30dp"
        android:layout_height="5dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/ku_light_gray_drag_handler"
        android:visibility="visible"
        app:cardCornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp" />

    <TextView
        android:id="@+id/tv_wish_list_other_consumer_title"
        style="@style/AndroidHeading3Semibold18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="39dp"
        android:text="@string/wish_list_other_consumer_title"
        android:textColor="@color/ku_gray6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_wish_list_other_consumer_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:nestedScrollingEnabled="false"
        android:orientation="horizontal"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_wish_list_other_consumer_title"
        tools:listitem="@layout/item_bookmark_product" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/md_wish_list_divider"
        android:layout_width="wrap_content"
        android:layout_height="11dp"
        android:layout_marginTop="14dp"
        app:dividerColor="@color/ku_gray2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_wish_list_other_consumer_item" />

    <TextView
        android:id="@+id/tv_wish_list_puchase_with_title"
        style="@style/AndroidHeading3Semibold18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/wish_list_puchase_with_title"
        android:textColor="@color/ku_gray6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/md_wish_list_divider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_wish_list_purchase_with_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:nestedScrollingEnabled="false"
        android:orientation="horizontal"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_wish_list_puchase_with_title"
        tools:listitem="@layout/item_bookmark_product" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_wish_list_detail_relative"
        style="@style/AndroidTitleSemibold14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/shape_purple_fill_4_rect"
        android:text="@string/wish_list_btn_detail_relative"
        android:textColor="@color/ku_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_wish_list_purchase_with_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>